@@ -1,3 +1,4 @@
+* #3807: Use toolbuttons as scroll buttons and make them insensitive (benzea)
 * #4892: Use the engine to make sugar icons insensitive (benzea)
 * #4941: Add menu entry with dialog to show About this XO (erikos)
 * #5089: show frame shortly when adding object to clipboard (erikos)
